<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageDetail"
    android:orientation="vertical">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginBottom="10dp">

             <ImageView
                 android:id="@+id/lang_logo"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginEnd="15dp"
                 tools:src="@android:color/darker_gray" />

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/lang_logo"
                 android:orientation="vertical">

                 <TextView
                     android:id="@+id/lang_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:textSize="40sp"
                     android:textStyle="bold"
                     tools:text="@string/lang_name" />

                 <TextView
                     android:id="@+id/lang_author"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:maxLines="2"
                     tools:text="@string/lang_author" />

                 <TextView
                     android:id="@+id/lang_year"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:maxLines="2"
                     tools:text="@string/lang_year" />

             </LinearLayout>

         </RelativeLayout>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/lang_desc"
             android:textSize="20sp"
             android:textAlignment="center"
             android:layout_marginBottom="10dp"/>

         <TextView
             android:id="@+id/lang_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/dummy_desc"
             android:textSize="18sp"/>
     </LinearLayout>

</ScrollView>